--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Example Site</h1>
-    <a href="/login/" style="display: block"> Login</a>
-    <a href="/registration/">Register</a>
+    <a href="login/" style="display: block"> Login</a>
+    <a href="registration/">Register</a>
     
 </body>
 </html>
