proper licensing and simple style

--- a/site/registration/index.html
+++ b/site/registration/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form action="register.php" method="POST">
-        <input type="email" name="email" placeholder="Your email" required>
-        <input type="password" name="haslo" placeholder="Your password">
+        <input id="email" type="email" name="email" placeholder="Your email" required>
+        <input id="password" type="password" name="haslo" placeholder="Your password">
         <button type="submit">Register</button>
          <a href="../login/">Back to login</a>
     </form>
