--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="clock(), date()">
     <h1>Example Site</h1>
